Closed Bug 1633453 Opened 5 years ago Closed 4 years ago

Clear display item cache when the display list send fails or WR backend changes

Categories

(Core :: Graphics: WebRender, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: mikokm, Assigned: mikokm)

References

Details

Attachments

(1 file)

In order for the display item caching to work correctly, WebRenderLayerManager has to know if display list send failed, or if the WR backend changed.

Priority: -- → P3
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/29ed956cc6c3
Clear display item cache when the display list send fails or WR backend changes r=jrmuizel
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: