Bug 1633453 - Clear display item cache when the display list send fails or WR backend changes r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D72692