gfx/layers/wr/DisplayItemCache.cpp
@@ -72,7 +72,7 @@ void DisplayItemCache::UpdateState() {
 
   // Clear the cache if the current state is invalid.
   if (mInvalid) {
-    ClearCache();
+    Clear();
   } else {
     FreeUnusedSlots();
   }
@@ -80,7 +80,7 @@ void DisplayItemCache::UpdateState() {
   mInvalid = false;
 }
 
-void DisplayItemCache::ClearCache() {
+void DisplayItemCache::Clear() {
   memset(mSlots.Elements(), 0, mSlots.Length() * sizeof(Slot));
   mFreeSlots.ClearAndRetainStorage();
 
@@ -132,7 +132,7 @@ void DisplayItemCache::SetCapacity(const size_t aInitialSize,
   mSlots.SetCapacity(aMaximumSize);
   mSlots.SetLength(aInitialSize);
   mFreeSlots.SetCapacity(aMaximumSize);
-  ClearCache();
+  Clear();
 }
 
 Maybe<uint16_t> DisplayItemCache::AssignSlot(nsPaintedDisplayItem* aItem) {
